--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Deepan Roy
 theme: jekyll-theme-minimal
-description: Hi! I'm an aspiring researcher focused on computer vision and generative AI, with research experience in computational
-photography and crime detection, and work experience at experience at Stripe. I am skilled in 2D/3D computer vision,
-federated learning, and generative modeling through hands-on research and implementations.
+description: |
+  Hi! I'm an aspiring researcher focused on computer vision and generative AI, with research experience in computational
+  photography and crime detection, and work experience at experience at Stripe. I am skilled in 2D/3D computer vision,
+  federated learning, and generative modeling through hands-on research and implementations.
