--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 title: Deepan Roy
 logo: /assets/img/cropped_circle_image.png
 theme: jekyll-theme-minimal
+description: |
+  Hi! I’m an aspiring researcher focused on computer vision, with research experience in computational photography and crime detection, 
+  project experience in 3D biomedical imagery, and work experience at experience at Stripe.
