--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@ title: Deepan Roy
 logo: /assets/img/cropped_circle_image.png
 theme: jekyll-theme-minimal
 description: |
-  Hi! I’m an aspiring researcher focused on <strong>computer vision</strong>, with research experience in computational photography and crime detection, 
-  project experience in 3D biomedical imagery, and work experience at <a href="https://stripe.com">Stripe</a>.
+  Hi! I’m an aspiring researcher focused on <strong>computer vision</strong>, with research experience in <strong>computational photography</strong> and <strong>crime detection</strong>, 
+  project experience in <strong>3D biomedical imagery</strong>, and work experience at Stripe.
+
+  <a href="mailto:f20220004@pilani.bits-pilani.ac.in">Email</a> / <a href="https://github.com/droy824">GitHub</a> / <a href="https://www.linkedin.com/in/deepan-roy-a274ba28b/">LinkedIn</a>
