--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,7 @@ theme: jekyll-theme-minimal
 description: |
   Hi! I’m an aspiring researcher focused on <strong>computer vision</strong>, with research experience in <strong>computational photography</strong> and <strong>crime detection</strong>, 
   project experience in <strong>3D biomedical imagery</strong>, and work experience at Stripe.
-
+  <br>
+  Skilled in <strong>2D/3D computer vision</strong>, <strong>federated learning</strong>, and <strong>generative image modeling</strong> through hands-on research and implementations.
+  <br>
   <a href="mailto:f20220004@pilani.bits-pilani.ac.in">Email</a> / <a href="https://github.com/droy824">GitHub</a> / <a href="https://www.linkedin.com/in/deepan-roy-a274ba28b/">LinkedIn</a>
