--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ description: |
   Skilled in <strong>2D/3D computer vision</strong>, <strong>federated learning</strong>, and <strong>generative image modeling</strong> through hands-on research and implementations.
   <br>
   <br>
-  <a href="mailto:f20220004@pilani.bits-pilani.ac.in">Email</a> / <a href="https://github.com/droy824">GitHub</a> / <a href="https://www.linkedin.com/in/deepan-roy-a274ba28b/">LinkedIn</a>
+  <a href="mailto:f20220004@pilani.bits-pilani.ac.in">Email</a> / <a href="https://www.linkedin.com/in/deepan-roy-a274ba28b/">LinkedIn</a>
