--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ description: |
   I'm skilled in <strong>2D/3D computer vision</strong>, <strong>federated learning</strong>, and <strong>generative image modeling</strong> through hands-on research and implementations.
   <br>
   <br>
-  <a href="mailto:f20220004@pilani.bits-pilani.ac.in">Email</a> / <a href="https://www.linkedin.com/in/deepan-roy-a274ba28b/">LinkedIn</a>
+  <a href="mailto:f20220004@pilani.bits-pilani.ac.in">Email</a> / <a href="https://www.linkedin.com/in/deepan-roy-a274ba28b/">LinkedIn</a> / <a href="assets/pdf/resume_12_8_25.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
